--- a/css/modals/security/_security.scss
+++ b/css/modals/security/_security.scss
@@ -1,6 +1,6 @@
 .security {
     &-dialog {
-        color: #fff;
+        color: #0b0b0c;
         font-size: 0.875rem;
         line-height: 1.5rem;
 
@@ -40,7 +40,7 @@
             padding: 0 20px;
             width: 100%;
             height: 1px;
-            background: #525252;
+            background: #d4d4d8;
 
             &:last-child {
                 display: none;
